--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Затемнение */
+    background-color: rgba(0, 0, 0, 0); /* Затемнение */
     z-index: -1; /* Помещаем затемнение за контент */
 }
 
@@ -62,6 +62,17 @@ main {
     justify-content: center; /* Центрируем элементы по вертикали */
 }
 
+.content {
+    flex: 1;
+    padding: 20px;
+    margin: 140px;
+    background-color: rgba(26, 26, 26, 0.8); /* Прозрачный фон */
+    border-radius: 10px;
+    border: 1px solid #4dd0e1; /* Светло-голубой */
+    max-width: 400px; /* Ограничиваем ширину контента */
+    width: 100%; /* Контент занимает всю доступную ширину */
+}
+
 .input-container {
     margin-bottom: 15px;
     text-align: center;
@@ -94,7 +105,8 @@ main {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
-    margin-bottom: 20px; /* Отступ между кнопкой и контентом */
+    margin-left: 75px;
+    margin-bottom: 50px; /* Отступ между кнопкой и контентом */
     text-align: center;
     display: block;
     width: 250px;
@@ -129,6 +141,29 @@ footer p {
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
 }
+
+.modal input {
+    -webkit-text-size-adjust: 100%;
+    padding: 15px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    background-color: rgba(200, 110, 255, 0.4);
+    font-family: inherit;
+    margin-top: 20px;
+    padding-right: 48px;
+    color: #fff;
+    font-weight: 600;
+    width: 100%;
+    padding-bottom: 15px;
+    font-size: 24px;
+    line-height: 24px;
+}
+
+.modal button {
+   margin-top: 50px;
+   margin-left: 120px;
+}
+
 
 .modal-content {
     background-color: #1a1a1a;
